src/snapshots/afrotd__parser__tests__interpretation_10.2.2_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 10
  - 2
  - 2
index: 2
text: "Ein Team A-Fumble oder ein Rückpass ist in Team A’s Endzone frei, wo A33 den Ball illegal schlägt oder kickt."
ruling: "Strafe –\nSafety (Regel 8.5.1.b)."
