src/snapshots/afrotd__parser__tests__interpretation_10.2.2_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 10
  - 2
  - 2
index: 4
text: "Team A puntet von seiner Endzone und der Ball wird bis zu\nder A-30 zurückgetragen. Während des Zurücktragens clippt A23 B35\nin Team A’s Endzone."
ruling: "Strafe – 15 Meter vom Basic Spot,\nwelcher das Ende des Laufes ist (A-30). Team B’s Ball, First Down und\n10."
