src/snapshots/afrotd__parser__tests__interpretation_10.2.2_6.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 10
  - 2
  - 2
index: 6
text: "Team A’s unberührter Punt aus der eigenen Endzone heraus\ngeht an der A-40 ins Aus. A2 clippt B2 in seiner Endzone, bevor der Ball\ngekickt wird."
ruling: "Strafe – Safety (Regel 9.1 Strafe) oder Team B\nkann den Ball an der A-25 nach der Strafdurchführung von dem Punkt,\nan dem der Ball ins Aus ging, snappen."
