src/snapshots/afrotd__parser__tests__interpretation_10.2.2_9.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 10
  - 2
  - 2
index: 9
text: "Während A1 advanct, foult B25 10 Meter jenseits der neutralen Zone. Nachdem A1 30 Meter advanct ist, fumbelt er und der Ball\nwird von B48 recovert, der den Ball über Team A’s Goalline advanct."
ruling: "Bestrafe Team B vom Basic Spot, welcher der Punkt des\nFumbles ist. Team A bleibt in Ballbesitz (Regel 5.2.3)."
