src/snapshots/afrotd__parser__tests__interpretation_10.2.3_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 10
  - 2
  - 3
index: 1
text: "Eines der Teams foult während eines Scrimmage Kicks, nachdem der Ball jenseits der neutralen Zone berührt wurde. Das Foul ereignet sich jenseits der neutralen Zone und Team B bringt den Ball als\nnächstes ins Spiel."
ruling: "Für Team B-Fouls wird die Strafe nach\ndem Drei-und-Eins-Prinzip durchgeführt, mit dem Postscrimmage Kick\nSpot als Basic Spot (Regel 2.25.11). Team B’s Ball, First Down und 10.\nFür Team A-Fouls wird die Strafe entweder vom Previous Spot oder von\ndem Punkt, an dem der anschließende Dead Ball zu Team B gehört,\ndurchgeführt (Regel 6.3.13)."
