src/snapshots/afrotd__parser__tests__interpretation_10.2.3_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 10
  - 2
  - 3
index: 3
text: "Team A’s Punt wird hinter der neutralen Zone geblockt, bevor sich ein Clipping oder ein Halten jenseits der neutralen Zone durch\nTeam B ereignet. Der Ball überquerte während des Downs die neutrale\nZone nicht."
ruling: "Regel 10.2.3 trifft nur dann zu, wenn ein Scrimmage Kick die neutrale Zone überquert. Team A bleibt in Ballbesitz nach\nDurchführung der Strafe vom Previous Spot."
